fix styling for buttons on mobile

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -7,6 +7,7 @@
   p {
     color: $very-dark-grayish-blue;
     text-align: center;
+    margin-bottom: 10px;
   }
 
   a {
